WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279328
CSS -webkit-perspective should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=279328
Summary
CSS -webkit-perspective should not eagerly evaluate calc()
Sam Weinig
Reported
2024-09-08 11:43:53 PDT
CSS -webkit-perspective should not eagerly evaluate calc()
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2024-09-08 12:27:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33297
EWS
Comment 2
2024-09-08 18:22:59 PDT
Committed
283325@main
(ce3a570d7004): <
https://commits.webkit.org/283325@main
> Reviewed commits have been landed. Closing PR #33297 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-08 18:23:29 PDT
<
rdar://problem/135520693
>
EWS
Comment 4
2024-09-18 15:20:29 PDT
Committed
283286.70@safari-7620-branch
(51af04b0855d): <
https://commits.webkit.org/283286.70@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1819 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug