CSS -webkit-perspective should not eagerly evaluate calc() https://bugs.webkit.org/show_bug.cgi?id=279328

Reviewed by Darin Adler.

Replaces eager evaluation of calc() in -webkit-perspective with storing
the primitive value for resolution at style building time.

* LayoutTests/fast/transforms/perspective-computed-expected.txt: Added.
* LayoutTests/fast/transforms/perspective-computed.html: Added.
* LayoutTests/fast/transforms/perspective-invalid-expected.txt: Added.
* LayoutTests/fast/transforms/perspective-invalid.html: Added.
* LayoutTests/fast/transforms/perspective-valid-expected.txt: Added.
* LayoutTests/fast/transforms/perspective-valid.html: Added.
    - Tests for parsing perspective and -webkit-perspective.
* Source/WebCore/css/parser/CSSPropertyParser.cpp:

Canonical link: https://commits.webkit.org/283325@main